...
            android:background="@drawable/edit_bg_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameTV">

            <EditText
                android:id="@+id/nameET"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:cursorVisible="true"
                android:gravity="center_vertical"
                android:hint="Rebecca Winter"
...
            android:background="@drawable/edit_bg_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardNumberTV">

<!--            <EditText-->
<!--                android:id="@+id/cardNumberET"-->
<!--                style="@style/editTextStyle"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:cursorVisible="true"-->
<!--                android:gravity="center_vertical"-->
<!--                android:hint="3258 1256 7568 7891"-->
...
            android:background="@drawable/edit_bg_grey"
            app:layout_constraintEnd_toEndOf="@id/expirationDateTV"
            app:layout_constraintStart_toStartOf="@id/expirationDateTV"
            app:layout_constraintTop_toBottomOf="@id/expirationDateTV">

<!--            <EditText-->
<!--                android:id="@+id/expirationDateET"-->
<!--                style="@style/editTextStyle"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:cursorVisible="true"-->
<!--                android:gravity="center_vertical"-->
<!--                android:maxLength="5"-->
...
            android:background="@drawable/edit_bg_grey"
            app:layout_constraintEnd_toEndOf="@id/securityCodeTV"
            app:layout_constraintStart_toStartOf="@id/securityCodeTV"
            app:layout_constraintTop_toBottomOf="@id/securityCodeTV">

            <EditText
                android:id="@+id/securityCodeET"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:cursorVisible="true"
                android:gravity="center_vertical"
                android:hint="123"
...
                android:background="@drawable/edit_bg_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fullNameTV">

                <EditText
                    android:id="@+id/fullNameET"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:cursorVisible="true"
                    android:gravity="center_vertical"
                    android:hint="Rebecca Winter"
...
                android:background="@drawable/edit_bg_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address1TV">

                <EditText
                    android:id="@+id/address1ET"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:cursorVisible="true"
                    android:gravity="center_vertical"
                    android:hint="Mandorley 112"
...
                android:background="@drawable/edit_bg_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address2TV">

                <EditText
                    android:id="@+id/address2ET"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:cursorVisible="true"
                    android:gravity="center_vertical"
                    android:hint="Entrance 1"
...
                android:background="@drawable/edit_bg_grey"
                app:layout_constraintEnd_toEndOf="@id/cityTV"
                app:layout_constraintStart_toStartOf="@id/cityTV"
                app:layout_constraintTop_toBottomOf="@id/cityTV">

                <EditText
                    android:id="@+id/cityET"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:cursorVisible="true"
                    android:gravity="center_vertical"
                    android:hint="Truro"
...
                android:background="@drawable/edit_bg_grey"
                app:layout_constraintEnd_toEndOf="@id/stateTV"
                app:layout_constraintStart_toStartOf="@id/stateTV"
                app:layout_constraintTop_toBottomOf="@id/stateTV">

                <EditText
                    android:id="@+id/stateET"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:cursorVisible="true"
                    android:gravity="center_vertical"
                    android:hint="Cornwall"
...
                android:background="@drawable/edit_bg_grey"
                app:layout_constraintEnd_toEndOf="@id/zipTV"
                app:layout_constraintStart_toStartOf="@id/zipTV"
                app:layout_constraintTop_toBottomOf="@id/zipTV">

                <EditText
                    android:id="@+id/zipET"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:cursorVisible="true"
                    android:gravity="center_vertical"
                    android:hint="89750"
...
                android:background="@drawable/edit_bg_grey"
                app:layout_constraintEnd_toEndOf="@id/countryTV"
                app:layout_constraintStart_toStartOf="@id/countryTV"
                app:layout_constraintTop_toBottomOf="@id/countryTV">

                <EditText
                    android:id="@+id/countryET"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:cursorVisible="true"
                    android:gravity="center_vertical"
                    android:hint="United Kingdom"
...
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="15dp"
        app:cardCornerRadius="8dp"
        android:backgroundTint="@color/white">

        <android.widget.Button
            android:id="@+id/paymentBtn"
            android:text="@string/review_order"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textAllCaps="false"
            android:layout_margin="15dp"
            style="@style/TextViewStyle"
...
