...
	<string name="to_payment">To Payment</string>

	<string name="color">Color:</string>
	<string name="close_model">Close Model</string>
	<string name="thank_you_for_submitting_your_review">Thank you for submitting your review!</string>

	<string name="review_order">Review Order</string>
	<string name="payment_details">You will not be charged until you review your purchase on the next screen.</string>
	<string name="card">Card</string>
	<string name="enter_a_payment_method">Enter a payment method</string>
	<string name="card_number">Card Number*</string>
	<string name="expiration_date">Expiration Date*</string>
	<string name="value_looks_invalid">Value looks invalid.</string>
...
	<string name="review_your_order">Review your order</string>
	<string name="deliver_address">Deliver Address</string>
	<string name="payment_method">Payment Method</string>
	<string name="dhl_standard_delivery">DHL Standard Delivery</string>
	<string name="social_text">2023 Sauce Labs All Rights Reserved Terms of Services | Privacy Policy</string>
	<string name="total">Total:</string>
	<string name="place_order">Place Order</string>
	<string name="continue_shopping">Continue Shopping</string>
	<string name="products">Products</string>
	<string name="biomatric_message">Biometric is or not supported or not enable on your device. Please check your device or your settings.</string>
	<string name="bod_example_com"><u>bod@example.com</u></string>
	<string name="alice_example_com_locked_out"><u>alice@example.com (locked out)</u></string>
	<string name="visual_example_com"><u>visual@example.com</u></string>
	<string name="visual_user_login">Visual User Login</string>
...
