...
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">


        <ImageView
            android:id="@+id/menuIV"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
...
            android:layout_height="24dp"
            android:layout_marginEnd="12dp"
            android:padding="2dp"
            android:visibility="visible"
            android:contentDescription="@string/shows_current_sorting_order_and_displays_available_sorting_options"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cartRL"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/sort_asc"
            tools:ignore="VectorDrawableCompat" />


        <RelativeLayout
...
